Add tools section.

--- a/index.html
+++ b/index.html
@@ -147,6 +147,47 @@
 				</table>
 
 				<h3>
+					<a id="Tools" class="anchor" href="#Tools"></a>
+					Tools <span class="count">(1)</span>
+				</h3>
+
+				<table id="tools">
+					<thead>
+						<tr>
+							<th class="distribution">Name</th>
+							<th class="version">Version</th>
+							<th class="links">Links</th>
+							<th class="github_open_issues">Issues</th>
+							<th class="travis_status_badge">Status</th>
+							<th class="coveralls_badge">Tests</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td class="distribution">Dot-files</td>
+							<td class="version">-</td>
+							<td class="links">
+								<span class="github">
+									<a href="https://github.com/guillaumeaubert/dot-files">GitHub</a>
+								</span>
+							</td>
+							<td class="github_open_issues">
+								<a href="https://github.com/guillaumeaubert/dot-files/issues">
+									View
+								</a>
+							</td>
+							<td class="travis_status_badge">
+								<a href="https://travis-ci.org/guillaumeaubert/dot-files">
+									<img src="https://travis-ci.org/guillaumeaubert/dot-files.svg?branch=master" alt='Build Status' />
+								</a>
+							</td>
+							<td class="coveralls_badge">-</td>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+
+				<h3>
 					<a id="TotalOpenSourceCommits" class="anchor" href="#AnsiblePlugins"></a>
 					Total Open Source Commits <span class="count" id="commits_total"></span>
 				</h3>
