--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Guillaume Aubert
-tagline: A visual dashboard to check on my open source projects
+tagline: A visual dashboard for my open source projects
 js_includes:
   - /js/cpan-distributions-list.min.js"
   - /js/chart.min.js
