Add new visualization for commits by weekday and hour.

--- a/git_contributions_statistics.html
+++ b/git_contributions_statistics.html
@@ -13,3 +13,10 @@ css_includes:
 </h3>
 
 <div id="commits_by_day"></div>
+
+<h3>
+	<a id="CommitsByWeekdayHour" class="anchor" href="#CommitsByWeekdayHour"></a>
+	Commits by Hour
+</h3>
+
+<div id="commits_by_weekday_hour"></div>
