Fix graph title.

--- a/git_contributions_statistics.html
+++ b/git_contributions_statistics.html
@@ -16,7 +16,7 @@ css_includes:
 
 <h3>
 	<a id="CommitsByWeekdayHour" class="anchor" href="#CommitsByWeekdayHour"></a>
-	Commits by Hour
+	Commits by Weekday Hour
 </h3>
 
 <div id="commits_by_weekday_hour"></div>
