Add display of commits by month.

--- a/git_contributions_statistics.html
+++ b/git_contributions_statistics.html
@@ -8,6 +8,13 @@ css_includes:
   - /css/git_contributions_statistics.css
 ---
 <h3>
+	<a id="CommitsByMonth" class="anchor" href="#CommitsByMonth"></a>
+	Commits by Month <span class="count" id="commits_total"></span>
+</h3>
+
+<div id="commits_by_month"></div>
+
+<h3>
 	<a id="CommitsByDay" class="anchor" href="#CommitsByDay"></a>
 	Commits by Day<span class="count" id="total_days"></span>
 </h3>
