--- a/git_contributions_statistics.html
+++ b/git_contributions_statistics.html
@@ -2,7 +2,7 @@
 layout: default
 title: Interesting statistics about my open source git commits
 js_includes:
-  - //d3js.org/d3.v3.min.js
+  - /js/d3.v3.min.js
   - /js/git_contributions_statistics.js
 css_includes:
   - /css/git_contributions_statistics.css
