--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: A visual dashboard for my open source projects
 js_includes:
-  - /js/cpan-distributions-list.min.js"
+  - /js/cpan-distributions-list.min.js
   - /js/dashboard.js
 ---
 
