Add list of gems.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,131 @@ js_includes:
   - /js/dashboard.js
 ---
 
+<!-- Ruby Gems -->
+<h3>
+	<a id="RubyGems" class="anchor" href="RubyGems"></a>
+	Ruby Gems <span class="count">(1)</span>
+</h3>
+
+<table id="ruby_gems">
+	<thead>
+		<tr>
+			<th class="distribution">Name</th>
+			<th class="links">Links</th>
+			<th class="github_open_issues">Issues</th>
+			<th class="travis_status_badge">Status</th>
+			<th class="coveralls_badge">Tests</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td class="distribution">git-commits-analyzer</td>
+			<td class="links">
+				<span class="github">
+					<a href="https://github.com/guillaumeaubert/git-commits-analyzer">GitHub</a> |
+					<a href="https://rubygems.org/gems/git-commits-analyzer">RubyGems</a>
+				</span>
+			</td>
+			<td class="github_open_issues">
+				<a href="https://github.com/guillaumeaubert/git-commits-analyzer/issues">
+					View
+				</a>
+			</td>
+			<td class="travis_status_badge">
+				<a href="https://travis-ci.org/guillaumeaubert/git-commits-analyzer">
+					<img src="https://travis-ci.org/guillaumeaubert/git-commits-analyzer.svg?branch=master" alt='Build Status' />
+				</a>
+			</td>
+			<td class="coveralls_badge">
+				-
+			</td>
+		</tr>
+	</tbody>
+</table>
+
+<!-- JQuery plugins -->
+<h3>
+	<a id="JQueryPlugins" class="anchor" href="#JQueryPlugins"></a>
+	JQuery Plugins <span class="count">(1)</span>
+</h3>
+
+<table id="jquery_plugins">
+	<thead>
+		<tr>
+			<th class="distribution">Plugin</th>
+			<th class="links">Links</th>
+			<th class="github_open_issues">Issues</th>
+			<th class="travis_status_badge">Status</th>
+			<th class="coveralls_badge">Tests</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td class="distribution">CPAN Distributions List</td>
+			<td class="links">
+				<span class="github">
+					<a href="https://github.com/guillaumeaubert/jquery-cpan-distributions-list">GitHub</a>
+				</span>
+			</td>
+			<td class="github_open_issues">
+				<a href="https://github.com/guillaumeaubert/jquery-cpan-distributions-list/issues">
+					View
+				</a>
+			</td>
+			<td class="travis_status_badge">
+				<a href="https://travis-ci.org/guillaumeaubert/jquery-cpan-distributions-list">
+					<img src="https://travis-ci.org/guillaumeaubert/jquery-cpan-distributions-list.svg?branch=master" alt='Build Status' />
+				</a>
+			</td>
+			<td class="coveralls_badge">
+				<a href='https://coveralls.io/r/guillaumeaubert/jquery-cpan-distributions-list?branch=master'>
+					<img src='https://coveralls.io/repos/guillaumeaubert/jquery-cpan-distributions-list/badge.svg?branch=master' alt='Coverage Status' />
+				</a>
+			</td>
+		</tr>
+	</tbody>
+</table>
+
+<!-- Ansible plugins -->
+<h3>
+	<a id="AnsiblePlugins" class="anchor" href="#AnsiblePlugins"></a>
+	Ansible Plugins <span class="count">(1)</span>
+</h3>
+
+<table id="ansible_plugins">
+	<thead>
+		<tr>
+			<th class="distribution">Plugin</th>
+			<th class="links">Links</th>
+			<th class="github_open_issues">Issues</th>
+			<th class="travis_status_badge">Status</th>
+			<th class="coveralls_badge">Tests</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td class="distribution">Ansible Symlink Plugin</td>
+			<td class="links">
+				<span class="github">
+					<a href="https://github.com/guillaumeaubert/ansible-symlink-plugin">GitHub</a>
+				</span>
+			</td>
+			<td class="github_open_issues">
+				<a href="https://github.com/guillaumeaubert/ansible-symlink-plugin/issues">
+					View
+				</a>
+			</td>
+			<td class="travis_status_badge">
+				<a href="https://travis-ci.org/guillaumeaubert/ansible-symlink-plugin">
+					<img src="https://travis-ci.org/guillaumeaubert/ansible-symlink-plugin.svg?branch=master" alt='Build Status' />
+				</a>
+			</td>
+			<td class="coveralls_badge">-</td>
+			</td>
+		</tr>
+	</tbody>
+</table>
+
 <!-- CPAN distributions -->
 <h3>
 	<a id="CPANDistributions" class="anchor" href="#CPANDistributions"></a>
@@ -42,93 +167,6 @@ js_includes:
 			<td class="github_open_issues"><!-- Count of issues and link to GitHub -->?</td>
 			<td class="travis_status_badge"><!-- Travis CI - badge to indicate build status --></td>
 			<td class="coveralls_badge"><!-- Coveralls.io - badge to indicate test coverage percentage --></td>
-		</tr>
-	</tbody>
-</table>
-
-<!-- JQuery plugins -->
-<h3>
-	<a id="JQueryPlugins" class="anchor" href="#JQueryPlugins"></a>
-	JQuery Plugins <span class="count">(1)</span>
-</h3>
-
-<table id="jquery_plugins">
-	<thead>
-		<tr>
-			<th class="distribution">Plugin</th>
-			<th class="version">Version</th>
-			<th class="links">Links</th>
-			<th class="github_open_issues">Issues</th>
-			<th class="travis_status_badge">Status</th>
-			<th class="coveralls_badge">Tests</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td class="distribution">CPAN Distributions List</td>
-			<td class="version">v1.0.2</td>
-			<td class="links">
-				<span class="github">
-					<a href="https://github.com/guillaumeaubert/jquery-cpan-distributions-list">GitHub</a>
-				</span>
-			</td>
-			<td class="github_open_issues">
-				<a href="https://github.com/guillaumeaubert/jquery-cpan-distributions-list/issues">
-					View
-				</a>
-			</td>
-			<td class="travis_status_badge">
-				<a href="https://travis-ci.org/guillaumeaubert/jquery-cpan-distributions-list">
-					<img src="https://travis-ci.org/guillaumeaubert/jquery-cpan-distributions-list.svg?branch=master" alt='Build Status' />
-				</a>
-			</td>
-			<td class="coveralls_badge">
-				<a href='https://coveralls.io/r/guillaumeaubert/jquery-cpan-distributions-list?branch=master'>
-					<img src='https://coveralls.io/repos/guillaumeaubert/jquery-cpan-distributions-list/badge.svg?branch=master' alt='Coverage Status' />
-				</a>
-			</td>
-		</tr>
-	</tbody>
-</table>
-
-<!-- Ansible plugins -->
-<h3>
-	<a id="AnsiblePlugins" class="anchor" href="#AnsiblePlugins"></a>
-	Ansible Plugins <span class="count">(1)</span>
-</h3>
-
-<table id="ansible_plugins">
-	<thead>
-		<tr>
-			<th class="distribution">Plugin</th>
-			<th class="version">Version</th>
-			<th class="links">Links</th>
-			<th class="github_open_issues">Issues</th>
-			<th class="travis_status_badge">Status</th>
-			<th class="coveralls_badge">Tests</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td class="distribution">Ansible Symlink Plugin</td>
-			<td class="version">-</td>
-			<td class="links">
-				<span class="github">
-					<a href="https://github.com/guillaumeaubert/ansible-symlink-plugin">GitHub</a>
-				</span>
-			</td>
-			<td class="github_open_issues">
-				<a href="https://github.com/guillaumeaubert/ansible-symlink-plugin/issues">
-					View
-				</a>
-			</td>
-			<td class="travis_status_badge">
-				<a href="https://travis-ci.org/guillaumeaubert/ansible-symlink-plugin">
-					<img src="https://travis-ci.org/guillaumeaubert/ansible-symlink-plugin.svg?branch=master" alt='Build Status' />
-				</a>
-			</td>
-			<td class="coveralls_badge">-</td>
-			</td>
 		</tr>
 	</tbody>
 </table>
