Clean up weekday hour display and add most active info.

--- a/git_contributions_statistics.html
+++ b/git_contributions_statistics.html
@@ -9,14 +9,16 @@ css_includes:
 ---
 <h3>
 	<a id="CommitsByMonth" class="anchor" href="#CommitsByMonth"></a>
-	Commits by Month <span class="count" id="commits_total"></span>
+	Commits by Month
+	<span class="count" id="commits_total"></span>
 </h3>
 
 <div id="commits_by_month"></div>
 
 <h3>
 	<a id="CommitsByDay" class="anchor" href="#CommitsByDay"></a>
-	Commits by Day<span class="count" id="total_days"></span>
+	Commits by Day
+	<span class="count" id="total_days"></span>
 </h3>
 
 <div id="commits_by_day"></div>
@@ -24,6 +26,7 @@ css_includes:
 <h3>
 	<a id="CommitsByWeekdayHour" class="anchor" href="#CommitsByWeekdayHour"></a>
 	Commits by Weekday Hour
+	<span class="count" id="most_active_weekday_hour"></span>
 </h3>
 
 <div id="commits_by_weekday_hour"></div>
