Display commits by language.

--- a/git_contributions_statistics.html
+++ b/git_contributions_statistics.html
@@ -30,3 +30,16 @@ css_includes:
 </h3>
 
 <div id="commits_by_weekday_hour"></div>
+
+<h3>
+	<a id="CommitsByLanguage" class="anchor" href="#CommitsByLanguage"></a>
+	Commits by Language
+	<span class="count" id="total_languages"></span>
+</h3>
+
+<ul>
+	<li>X-axis: lines added.</li>
+	<li>Y-axis: lines deleted.</li>
+	<li>Circle radius: logarithmic scale based on the number of commits in that language.</li>
+</ul>
+<div id="commits_by_language"></div>
