Add information on how to use the graphs.

--- a/git_contributions_statistics.html
+++ b/git_contributions_statistics.html
@@ -7,6 +7,10 @@ js_includes:
 css_includes:
   - /css/git_contributions_statistics.css
 ---
+<div style="text-align: center">
+	(hover above interesting data points for more information)
+</div>
+
 <h3>
 	<a id="CommitsByMonth" class="anchor" href="#CommitsByMonth"></a>
 	Commits by Month
