Add npm link to JQuery plugin.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ js_includes:
 			<td class="distribution">CPAN Distributions List</td>
 			<td class="links">
 				<span class="github">
-					<a href="https://github.com/guillaumeaubert/jquery-cpan-distributions-list">GitHub</a>
+					<a href="https://github.com/guillaumeaubert/jquery-cpan-distributions-list">GitHub</a> |
+					<a href="https://www.npmjs.com/package/cpan-distributions-list">npm</a>
 				</span>
 			</td>
 			<td class="github_open_issues">
