Display lines changed by month.

--- a/git_contributions_statistics.html
+++ b/git_contributions_statistics.html
@@ -47,3 +47,11 @@ css_includes:
 	<li>Circle radius: logarithmic scale based on the number of commits in that language.</li>
 </ul>
 <div id="commits_by_language"></div>
+
+<h3>
+	<a id="LinesChangedByMonth" class="anchor" href="#LinesChangedByMonth"></a>
+	Lines Changed by Month
+	<span class="count" id="total_lines_changed"></span>
+</h3>
+
+<div id="lines_changed_by_month"></div>
